--- a/jogo_da_memoria-master/jogo_da_memoria-master/public/styles/main.css
+++ b/jogo_da_memoria-master/jogo_da_memoria-master/public/styles/main.css
@@ -84,6 +84,10 @@ footer ul a img:hover {
     justify-content: center;
 }
 
+#nivel {
+    padding: 20%;
+}
+
 #esq {
     background-color: rgb(226, 228, 96);
     justify-content: space-between;
